tests/trybuild/compile_fail/base_allocator_unsend.stderr
error[E0277]: `Rc<bump_scope::alloc::Global>` cannot be sent between threads safely
  --> tests/trybuild/compile_fail/base_allocator_unsend.rs:12:24
   |
12 |       std::thread::spawn(move || {
   |  _____------------------_^
   | |     |
   | |     required by a bound introduced by this call
13 | |         drop(bump);
14 | |     });
   | |_____^ `Rc<bump_scope::alloc::Global>` cannot be sent between threads safely
   |
   = help: within `RcAllocator<bump_scope::alloc::Global>`, the trait `Send` is not implemented for `Rc<bump_scope::alloc::Global>`
note: required because it appears within the type `RcAllocator<bump_scope::alloc::Global>`
  --> tests/trybuild/compile_fail/base_allocator_unsend.rs:20:8
   |
20 | struct RcAllocator<A> {
   |        ^^^^^^^^^^^
   = note: required for `Bump<RcAllocator<bump_scope::alloc::Global>>` to implement `Send`
note: required because it's used within this closure
  --> tests/trybuild/compile_fail/base_allocator_unsend.rs:12:24
   |
12 |     std::thread::spawn(move || {
   |                        ^^^^^^^
note: required by a bound in `spawn`
  --> $RUST/std/src/thread/functions.rs
   |
   | pub fn spawn<F, T>(f: F) -> JoinHandle<T>
   |        ----- required by a bound in this function
...
   |     F: Send + 'static,
   |        ^^^^ required by this bound in `spawn`
